# RoboRTS-2018RMSC

./: .gitignore  CMakeLists.txt  README.md
modules/decision/: CMakeLists.txt
modules/decision/ICRA_decision/: decision_node.cpp
modules/decision/RMSC_decision_v0/: action_behavior.h  blackboard.h  decision_node.cpp  goal_factory.h
modules/decision/RMSC_decision_v0/config/: decision.prototxt
modules/decision/RMSC_decision_v1/: action_behavior.h  behavior_node.h  behavior_tree.h  goal_factory.h
modules/decision/behavior_tree/: blackboard.h
modules/driver/camera/config/: camera_param.prototxt
modules/driver/serial/: infantry_info.h  serial_com_node.cpp  serial_com_node.h
modules/perception/detection/: CMakeLists.txt
modules/perception/detection/color_detection/: color_detection_node.cpp  color_detection_node.h
modules/perception/detection/util/: cv_toolbox.h
modules/perception/localization/config/: localization.master.blue.prototxt  localization.master.prototxt  localization.master.red.prototxt  localization.prototxt  localization.wing.blue.prototxt  localization.wing.prototxt  localization.wing.red.prototxt
modules/planning/global_planner/a_star_planner/: a_star_planner.cpp  a_star_planner.h
modules/stream/messages/: CMakeLists.txt
modules/stream/messages/action/: GetAmmo.action  GlobalPlanner.action  InfantryInfo.action  LocalPlanner.action  Localization.action  NavTo.action
modules/stream/messages/msg/: AmmoDetect.msg  ConditionOverride.msg  GripperCmd.msg  GripperInfo.msg
modules/stream/tf_tree/config/: tf_tree.prototxt
rmsc/: CMakeLists.txt
rmsc/aggressive_gain_buff/: aggressive_gain_buff_client.py  aggressive_gain_buff_node.py
rmsc/ammo_lidar_detect/: map_completion_test.py
rmsc/ammo_scan/: map_completion_test.py
rmsc/ammo_visual_detect/: CMakeLists.txt  README.md  ammo_visual_detect_client.cpp  ammo_visual_detect_node.cpp  mag_track_node.cpp  mag_track_node.h
rmsc/ammo_visual_detect/action/: LookAndMove.action
rmsc/ammo_visual_detect/action_msg/: LookAndMoveActionFeedback.h  LookAndMoveGoal.h  MagTrackActionFeedback.h  MagTrackGoal.h
rmsc/ammo_visual_detect/backup/: mag_track_node (backup).cpp  mag_track_node (backup2_before actionlib).cpp
rmsc/ammo_visual_detect/backup/camera_config/: camera_param (uvc1.2).prototxt  camera_param(uvc2.2) .prototxt
rmsc/ammo_visual_detect/proto/: arguments.master.blue.prototxt  arguments.master.red.prototxt  arguments.proto  arguments.prototxt  arguments.wing.blue.prototxt  arguments.wing.red.prototxt
rmsc/decision_v1/: CMakeLists.txt  action_behavior.h  behavior_node.h  behavior_tree.h  blackboard.h  decision_node.cpp  decision_node_final.cpp  goal_factory.h
rmsc/decision_v1/config/: decision.master.prototxt  decision.prototxt  decision.wing.prototxt
rmsc/decision_v1/proto/: decision.proto
rmsc/decision_v1_final/: CMakeLists.txt  action_behavior.h  behavior_node.h  behavior_tree.h  blackboard.h  decision_node_final.cpp  goal_factory.h
rmsc/decision_v1_final/config/: decision.master.prototxt  decision.prototxt  decision.wing.prototxt
rmsc/decision_v1_final/proto/: decision.proto
rmsc/get_ammo_action/: get_ammo_client.py  get_ammo_node.py  gripper.py  gripper_test.py
rmsc/look_n_move_action/: look_n_move_client.py  look_n_move_node.py  look_n_move_test.py
rmsc/map_mux/: map_mux.launch  map_mux_client.py  map_mux_node.py  navigation_mux.launch
rmsc/map_mux/maps/: 14.yaml  15.pgm  15.yaml  16.pgm  16.yaml  24.yaml  25.pgm  25.yaml  26.pgm  26.yaml  34.yaml  35.pgm  35.yaml  36.pgm  36.yaml  4.pgm  4.yaml  5.pgm  5.yaml  6.pgm  6.yaml  map-base.pgm  map34.pgm  map34.yaml  map35.pgm  map35.yaml  map36-5.pgm  map36-5.yaml  map36.pgm  map36.yaml  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map6.pgm  map6.yaml
rmsc/misc/: fake_referee.py
rmsc/misc/junk/ammo_visual_detect/: ammo_visual_detect_node.h  ammo_visual_detect_node.py  package.xml
rmsc/misc/junk/obstacle_scan/: obstacle_scan_node.h
rmsc/misc/launch/: get_ammo_client_master.launch  get_ammo_test.launch  master.launch  master_blue.launch  master_mux.launch  rviz.launch  rviz_master.launch  rviz_wing.launch  sim_rmsc.launch  wing.launch  wing_blue.launch  wing_mux.launch
rmsc/misc/shell/: BLUE_MASTER.sh  BLUE_WING.sh  RED_MASTER.sh  RED_WING.sh
rmsc/nav_to_action/: nav_to_client.py  nav_to_node.py
rmsc/obstacle_scan/: CMakeLists.txt  obstacle_scan_node.cpp  obstacle_scan_node.h  package.xml
rmsc/obstacle_scan/action/: ObstacleScan.action
rmsc/obstacle_scan/action_msg/: ObstacleScanAction.h  ObstacleScanActionFeedback.h  ObstacleScanActionGoal.h  ObstacleScanActionResult.h  ObstacleScanFeedback.h  ObstacleScanGoal.h  ObstacleScanResult.h
rmsc/obstacle_scan/proto/: arguments.prototxt
rmsc/rmsc_messages/: CMakeLists.txt
rmsc/rmsc_messages/action/: AggressiveGainBuff.action  MapMux.action  ObstacleScan.action
rmsc/rmsc_messages/msg/: GripperInfo.msg
rmsc/seer/: CMakeLists.txt  package.xml  seer_node.cpp  seer_node.h
rmsc/seer/action/: Seer.action
rmsc/seer/action_msg/: SeerAction.h  SeerActionFeedback.h  SeerActionGoal.h  SeerActionResult.h  SeerFeedback.h  SeerGoal.h  SeerResult.h
rmsc/seer/proto/: arguments.blue.prototxt  arguments.proto  arguments.prototxt  arguments.red.prototxt
scripts/: GetAmmoActionClient.py  GetAmmoActionServer.py  GripperControl.py  GripperTestNode.py  LookAndMoveActionServer.py  NavToActionClient.py  NavToActionServer.py  TopLidarServoNode.py  condition_overide_node.py
scripts/motion/gripper_ctrl/: GripperControl.py  GripperTestNode.py
scripts/motion/look_n_move/: look_n_move_client.py  look_n_move_node.py  look_n_move_test.py
scripts/motion/nav_to/: nav_to_client.py  nav_to_node.py
scripts/task/get_ammo/: get_ammo_client.py  get_ammo_node.py  gripper.py  gripper_test.py
scripts/task/map_completion/: map_completion_test.py
tools/launch/: delta_2b_lidar.launch  gripper_test.launch  icra_master.launch  icra_wing.launch  navigation_stage_navto_server.launch  navigation_stage_rmsc.launch  rmsc_master.launch
tools/rviz/: rm_master.rviz  rm_wing.rviz
(+33 files in other folders)
